# actix-prisma

./: .gitignore  Cargo.toml  README.md
prisma/: schema.prisma
prisma/migrations/20230326072247_init/: migration.sql
prisma/migrations/20230326110443_user_added/: migration.sql
prisma/migrations/20230326161425_fixed_id_users/: migration.sql
src/: main.rs  prisma.rs
src/post/: post.rs
src/user/: user.rs
