[package]
name = "actix-prisma"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = ["prisma-cli"]

[dependencies]
actix-web = "4"
env_logger = "0.10.0"
chrono = "0.4.23"
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.5" }
serde = "1.0.158"
cargo-watch = "8.4.0"
